correccion ortografica en coutas y boton de cancelar que no funcionaba

--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregar.cshtml
@@ -86,7 +86,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label class="col-sm-3 col-form-label">Cuenta de Banco</label>
+                                <label class="col-sm-3 col-form-label">Cuenta de banco</label>
                                 <div class="col-sm-6">
                                     <select class="form-control" name="bank_id" required>
                                         <option value="">Elije una cuenta</option>
@@ -102,7 +102,7 @@
                                             }
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Cuenta de Banco</small>
+                                    <small class="form-text text-muted">Cuenta de banco</small>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
