--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -193,11 +193,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                     <li>
                                         @if (Model.side_sub_menu == "cuotas_agregar")
                                         {
-                                            <a href="@Url.Action("agregar", "cuotas")" class="active">Agregar cuenta de Banco o CC</a>
+                                            <a href="@Url.Action("agregar", "cuotas")" class="active">Agregar Cuenta de banco o CC</a>
                                         }
                                         else
                                         {
-                                            <a href="@Url.Action("agregar", "cuotas")">Agregar cuenta de Banco o CC</a>
+                                            <a href="@Url.Action("agregar", "cuotas")">Agregar Cuenta de banco o CC</a>
                                         }
                                     </li>
                                 </ul>
@@ -208,7 +208,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <ul class="list-unstyled">
                                     <li><a href="@Url.Action("balance", "cuotas")">Balance Pendiente</a></li>
                                     <li><a href="@Url.Action("estado", "cuotas")">Estado de Cuenta</a></li>
-                                    <li><a href="@Url.Action("agregar", "cuotas")">Agregar cuenta de Banco o CC</a></li>
+                                    <li><a href="@Url.Action("agregar", "cuotas")">Agregar Cuenta de banco o CC</a></li>
                                 </ul>
                             }
                         </li>
