--- a/WebApplication1/Views/cuotas/agregar.cshtml
+++ b/WebApplication1/Views/cuotas/agregar.cshtml
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Cuenta de Banco o CC</h4>
+                            <h4 class="page-title">Agregar Cuenta de banco o CC</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="index.html" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Agregar Cuenta de Banco o CC</li>
+                            <li class="breadcrumb-item active">Agregar Cuenta de banco o CC</li>
                         </ul>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                             @Html.AntiForgeryToken()
                             <div class="banco box">
                                 <div class="form-divider"></div>
-                                <h5 class="d-inline-block m-b-20">Información de la cuenta de Banco</h5>
+                                <h5 class="d-inline-block m-b-20">Información de la Cuenta de banco</h5>
                                 <div class="form-group row">
                                     <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la Cuenta</label>
                                     <div class="col-sm-9">
