--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -200,13 +200,13 @@
                                             @if (Model.side_sub_menu == "cuotas_cuenta")
                                             {
                                                 <li class="active">
-                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar cuenta de banco</a>
+                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a>
                                                 </li>
                                             }
                                             else
                                             {
                                                 <li>
-                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar cuenta de banco</a>
+                                                    <a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a>
                                                 </li>
                                             }
 
@@ -230,7 +230,7 @@
                                         <a href="javascript:void(0);" class="waves-effect waves-light"><i class="mdi mdi-coin"></i><span>Cuotas</span><span class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                                         <ul class="list-unstyled">
                                             <li><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })">Listado de cuotas</a></li>
-                                            <li><a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar cuenta de banco</a></li>
+                                            <li><a href="@Url.Action("agregarcuenta", "cuotas", new { area = "coadmin" })">Agregar Cuenta de banco</a></li>
                                             <li><a href="@Url.Action("pagos","cuotas", new { area = "coadmin" })">Pagos</a></li>
                                         </ul>
                                     }
