--- a/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/agregarcuenta.cshtml
@@ -13,7 +13,7 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Cuenta de Banco</h4>
+                            <h4 class="page-title">Agregar Cuenta de banco</h4>
                         </div>
                     </div>
                     <div class="float-right">
@@ -47,7 +47,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block m-b-20">Información de la cuenta de Banco</h5>
+                            <h5 class="d-inline-block m-b-20">Información de la Cuenta de banco</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre de la cuenta</label>
