--- a/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
@@ -92,10 +92,10 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label class="col-sm-3 col-form-label">Cuenta de vanco</label>
+                                <label class="col-sm-3 col-form-label">Cuenta de banco</label>
                                 <div class="col-sm-6">
                                     <select class="form-control" name="bank_id"
-                                            data-toggle="tooltip" title="Cuenta de vanco"
+                                            data-toggle="tooltip" title="Cuenta de banco"
                                             required>
                                         <option value="">Elije una cuenta</option>
                                         @foreach (var item in Model.bankList)
@@ -110,7 +110,7 @@
                                             }
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Cuenta de vanco</small>
+                                    <small class="form-text text-muted">Cuenta de banco</small>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="@Url.Action("agregarcuenta", "cuotas", new {  area = "coadmin" })">
@@ -130,8 +130,8 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
-                            <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
-                        </div>
+                            <a href="javascript:history.back()"> <button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button>
+</div>
                     }
                 </div>
             </div>
