--- a/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/verTitulo.cshtml
@@ -122,7 +122,7 @@
 
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Lista de comunidades</small>
+                                    @*<small class="form-text text-muted">Lista de comunidades</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
