Correcciones en small tooltips

--- a/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
@@ -126,7 +126,7 @@
                                            placeholder="XXX-XXXXXXXX-X-XX" id="example-lastname1-input"
                                            data-toggle="tooltip" title="Cuenta comercial"
                                            />
-                                    <small class="form-text text-muted">Merchant Account</small>
+                                    <small class="form-text text-muted">Cuenta comercial</small>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
