--- a/WebApplication1/Areas/coadmin/Views/titulares/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/ver.cshtml
@@ -72,7 +72,7 @@
                                 <input class="form-control" type="email" name="email" required value="@Model.editUser.email" readonly
                                        data-toggle="tooltip"
                                        placeholder="Correo electrónico del titular" id="example-email-input">
-                                <small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>
+                                @*<small class="form-text text-muted">Base utilizada para identificar las unidades suscritas de varias comunidades adscritas.</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -82,7 +82,7 @@
                                 <input class="form-control" type="password" value="@Model.editUser.password"
                                        placeholder="Contraseña" id="example-password-input" readonly
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
+                                @*<small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -91,7 +91,7 @@
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="@Model.editUser.first_name1" readonly
                                        placeholder="Nombre" id="example-name2-input" data-toggle="tooltip" />
-                                <small class="form-text text-muted">Nombre del titular</small>
+                                @*<small class="form-text text-muted">Nombre del titular</small>*@
                             </div>
                         </div>
                         <div class="form-group row">
@@ -100,7 +100,7 @@
                                 <input class="form-control" type="text" value="@Model.editUser.last_name1" readonly
                                        placeholder="Apellido paterno" id="example-lastname2-input"
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Apellido paterno del titular</small>
+                                @*<small class="form-text text-muted">Apellido paterno del titular</small>*@
                             </div>
                         </div>
                         <div class="form-group row">
@@ -109,7 +109,7 @@
                                 <input class="form-control" type="text" value="@Model.editUser.mother_last_name1" readonly
                                        placeholder="Apellido materno" id="example-lastname2m-input"
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Apellido materno del titular</small>
+                                @*<small class="form-text text-muted">Apellido materno del titular</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -119,7 +119,7 @@
                                 <input class="form-control" type="tel" value="@Model.editUser.phone_number1"
                                        placeholder="# Teléfono" id="example-tel1-input" readonly
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Número de teléfono del titular</small>
+                                @*<small class="form-text text-muted">Número de teléfono del titular</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -129,7 +129,7 @@
                                 <input class="form-control" type="text" value="@Model.editUser.postal_address"
                                        placeholder="Dirección postal" id="example-address1-input" readonly
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Dirección postal del titular</small>
+                                @*<small class="form-text text-muted">Dirección postal del titular</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -139,7 +139,7 @@
                                 <input class="form-control" type="text" value="@Model.editUser.residential_address"
                                        placeholder="Dirección Residencial" id="example-address2-input" readonly
                                        data-toggle="tooltip" />
-                                <small class="form-text text-muted">Dirección residencial del titular</small>
+                                @*<small class="form-text text-muted">Dirección residencial del titular</small>*@
                             </div>
                         </div>
 
