--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -16,9 +16,9 @@
                         </div>
                     </div>
                     <div class="float-right">
-                        @if(Model.isPartial == true)
+                        @if (Model.isPartial == true)
                         {
-                              <ul></ul>
+                            <ul></ul>
                         }
                         else
                         {
@@ -30,20 +30,85 @@
                 </div>
             </div>
         </div>
-        <!-- end page title end breadcrumb -->
+
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
+            <div class="col-12">
+                <div class="card m-b-30">
+                    <div class="card-body">
+                        <div class="row form-material">
+                            <div class="col-md-6">
+                                <h5 class="d-inline-block">Listado de comunidades administradas</h5>
+                            </div>
+                            <div class="col-md-6 mb-1">
+                                
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th class="f-b">Comunidad</th>                                        
+                                        <th class="text-center f-b">Opciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.communityList)
+                                    {
+                                        <tr>
+                                            <td>@item.first_name</td>                                            
+                                            <td class="text-center">
+                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "coadmin", id = item.id })">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>                                                                                             
+                                            </td>
+
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div><!-- end row -->
+        <!-- back button -->
+        <div class="row pb-4">
+            <div class="col-md-6">
+                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+            </div>
+        </div>
+        <!-- end page title end breadcrumb -->
+        @*<div class="row">
 
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
                         @if (Convert.ToBoolean(Session["Active"]) == false)
-                        { 
+                        {
                         <h3>Su registro ha sido completado exitosamente pero se mantiene inactivo.  Proceda a revisar su Correo electrónico para completar el mismo.</h3>
                         }
                         </div>
                 </div>
             </div>
-        </div><!-- end row -->
+        </div>*@<!-- end row -->
 
     </div><!-- container -->
 
