--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -43,7 +43,7 @@
                                 <h5 class="d-inline-block">@Model.viewSupplier.company - @Model.viewSupplier.contact_name | <input type="hidden" class="rating" data-filled="mdi mdi-star font-20 text-warning" data-empty="mdi mdi-star-outline font-20 text-warning" data-readonly value="@Model.viewSupplier.assessment" /></h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("editar", "suplidores", new { area = "coadmin", editID=Model.viewSupplier.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Editar</button></a>
+                                @*<a href="@Url.Action("editar", "suplidores", new { area = "coadmin", editID=Model.viewSupplier.id })" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Editar</button></a>*@
                                 @*<a href="@Url.Action("agregar", "suplidores", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 ">Agregar nuevo</button></a>*@
                             </div>
                         </div>
