--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -122,7 +122,20 @@
                 <div class="m-b-10 title-condominio">
                     <div class="text-center">
                         <h6>@Model.curUser.first_name1 @Model.curUser.last_name1</h6>
-                        <a class="text-success" href="#">@Model.communityName<span class="waves-block">@Model.communityApart</span></a>
+                        @*<a class="text-success" href="#">@Model.communityList<span class="waves-block">@Model.communityApart</span></a>*@
+                    @*<select class="form-control" name="communitySelect">
+                        @foreach (var item in Model.communityList)
+                        {
+                            if (Model.communityID1 == item.id)
+                            {
+                                <option value="@item.id" selected>@item.first_name</option>
+                            }
+                            else
+                            {
+                                <option value="@item.id">@item.first_name</option>
+                            }                          
+                        }
+                    </select>*@
                         <p class="text-primary text-uppercase"><sub><i class="mdi mdi-checkbox-blank-circle"></i> Activo</sub></p>
                     </div>
 
