--- a/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/listado.cshtml
@@ -167,9 +167,9 @@
                                                     <button type="button" class="btn btn-info waves-effect waves-light btn-sm mb-1">Ver comentarios</button>
                                                 </a>
                                             </td>
-                                            <td class="text-center"><a href="@Url.Action("versuplidor", "suplidores", new { area = "coadmin", selID =item.id })"><button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Ver"><i class="mdi mdi-eye"></i></button></a>
-                                            <a href="@Url.Action("editar","suplidores", new { area = "coadmin", editID=item.id })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a>
-                                            <a href="#" onclick="onDeleteSupplier(this)" data-id="@item.id"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("versuplidor", "suplidores", new { area = "coadmin", selID =item.id })"><button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Ver"><i class="mdi mdi-eye"></i></button></a>
+                                            </td>
                                             <!-- Modal Valorar -->
                                             <div class="modal fade" id="ModalValorar" tabindex="-1" role="dialog" aria-hidden="true">
                                                 <div class="modal-dialog modal-dialog-centered" role="document">
