--- a/WebApplication1/Areas/coadmin/Views/titulares/verTitulo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/verTitulo.cshtml
@@ -127,13 +127,13 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="apartment-input" class="col-sm-3 col-form-label">Apartamento</label>
+                                <label for="apartment-input" class="col-sm-3 col-form-label">Propiedad</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="@Model.titulo.apartment"
                                            name="apartment" required readonly
                                            data-toggle="tooltip"
-                                           placeholder="Apartamento" id="apartment-input">
-                                    @*  <small class="form-text text-muted">Apartamento del Titular</small>*@
+                                           placeholder="Propiedad" id="apartment-input">
+                                    @*  <small class="form-text text-muted">Propiedad del Titular</small>*@
                                 </div>
                             </div>
 
