--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarTitulo.cshtml
@@ -133,12 +133,12 @@
 
                         <div class="form-divider"></div>
                         <div class="form-group row">
-                            <label for="apartment-input" class="col-sm-3 col-form-label">Apartamento</label>
+                            <label for="apartment-input" class="col-sm-3 col-form-label">Propiedad</label>
                             <div class="col-sm-9">
                                 <input class="form-control" type="text" value="" name="apartment" required
-                                       data-toggle="tooltip" title="Apartamento del titular"
-                                       placeholder="Apartamento" id="apartment-input">
-                                <small class="form-text text-muted">Apartamento del titular</small>
+                                       data-toggle="tooltip" title="Propiedad del titular"
+                                       placeholder="Propiedad" id="apartment-input">
+                                <small class="form-text text-muted">Propiedad del titular</small>
                             </div>
                         </div>
                         <div class="form-divider"></div>
