--- a/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listadoTitulos.cshtml
@@ -66,7 +66,7 @@
                                     <tr>
                                         <th class="f-b">Comunidad</th>
                                         <th class="f-b">Fecha de adquisición</th>
-                                        <th class="f-b">Apartamento</th>
+                                        <th class="f-b">Propiedad</th>
                                         <th class="f-b">¿Está arrendada?</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
