--- a/WebApplication1/Views/control/community.cshtml
+++ b/WebApplication1/Views/control/community.cshtml
@@ -49,17 +49,34 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
+                        <div class="row form-material">
+                            <div class="col-md-6">
+                                <h5 class="d-inline-block">Listado de comunidades administradas</h5>
+                            </div>
+                            <div class="col-md-6 mb-1">
+
+                            </div>
+                        </div>
                         <div class="table-responsive">
-                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" 
-                                   style="border-collapse: collapse; border-spacing: 0; width: 100%;">
-                                <thead class="header-table">
+                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <thead>
                                     <tr>
-                                        <th class="f-b">Nombre</th>
-                                        <th class="f-b">Administrador</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Comunidad</th>
+                                        <th class="f-b">Descripción</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
@@ -68,34 +85,124 @@
                                     {
                                         <tr>
                                             <td>@item.first_name</td>
-                                            <td class="text-center">@item.admin_email</td>
+                                            <td>@item.description</td>
                                             <td class="text-center">
-                                                @if (item.is_active == true)
+                                                <a href="@Url.Action("listadoTitulos", "control", new { Id = item.id })"
+                                                   class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                   data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                                    <i class="mdi mdi-home"></i>
+                                                </a>
+                                                @if (Model.communityID1 == item.id)
                                                 {
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm">Activo</button>
+                                                    <a href="#" class="btn btn-success waves-effect waves-light btn-sm mb-1"
+                                                       data-placement="top">
+                                                        <i class="mdi mdi-checkbox-marked-outline"></i>
+                                                    </a>
                                                 }
                                                 else
                                                 {
-                                                    <button type="button" class="btn btn-danger waves-effect waves-light btn-sm">Inactivo</button>
+                                                    <a href="@Url.Action("community", "control", new { Id = item.id })"
+                                                       class="btn btn-success waves-effect waves-light btn-sm mb-1 comunidadSelect"
+                                                       data-placement="top">
+                                                        <i class="mdi mdi-checkbox-blank-outline"></i>
+                                                    </a>
                                                 }
                                             </td>
-                                            <td class="text-center">
-                                                <a href="@Url.Action("panel", "control", new { id= item.id })">
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Editar">
-                                                        <i class="mdi mdi-lead-pencil"></i>
-                                                    </button>
-                                                </a>
-                                            </td>
+
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div><!-- end row -->
+        @*<div class="row">
+                @if (ViewBag.msgError != null)
+                {
+                    <div class="col-12">
+                        <div class="alert alert-danger" role="alert">
+                            <strong>Error: </strong> @ViewBag.msgError
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    </div>
+                }
+                <div class="col-12">
+                    <div class="card m-b-30">
+                        <div class="card-body">
+                            <div class="row form-material">
+                                <div class="col-md-6">
+                                    <h5 class="d-inline-block">Listado</h5>
+                                </div>
+                            </div>
+                            <div class="table-responsive">
+                                <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                    <thead>
+                                        <tr>
+                                            <th class="f-b">Comunidad</th>
+                                            <th class="f-b">Fecha de adquisición</th>
+                                            <th class="f-b">Propiedad</th>
+                                            <th class="f-b">¿Está arrendada?</th>
+                                            <th class="f-b">Estado</th>
+                                            <th class="text-center f-b">Opciones</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model.titulosList)
+                                        {
+                                            <tr>
+                                                <td>@item.community.first_name</td>
+                                                <td>@item.acq_date.ToString("MM/dd/yyyy")</td>
+                                                <td>@item.apartment</td>
+                                                @if (item.is_leased)
+                                                {
+                                                    <td>Si</td>
+                                                }
+                                                else
+                                                {
+                                                    <td>No</td>
+                                                }
+                                                <td class="text-center">
+                                                    @if (item.is_active == true)
+                                                    {
+                                                        <button type="button" class="btn btn-primary waves-effect waves-light btn-sm">Activo</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button type="button" class="btn btn-danger waves-effect waves-light btn-sm">Inactivo</button>
+                                                    }
+                                                </td>
+                                                <td class="text-center">
+                                                    <a href="@Url.Action("verTitulo", "titulares", new { area = "coadmin", id = item.Id })">
+                                                        <button type="button"
+                                                                class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                                data-toggle="tooltip"
+                                                                data-placement="top"
+                                                                title="Ver">
+                                                            <i class="mdi mdi-eye"></i>
+                                                        </button>
+                                                    </a>
+                                                    <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "coadmin", id = item.Id })"
+                                                       class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                       data-toggle="tooltip" data-placement="top" title="Listado Vehículos">
+                                                        <i class="mdi mdi-car"></i>
+                                                    </a>
+                                                </td>
+
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>*@ <!-- end row -->
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
@@ -107,3 +214,10 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+
+    <script>
+        function changeComu(selectVal) {                            
+                    
+        }
+    </script>
+        
