--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -57,29 +57,37 @@
                         <div class="table-responsive">
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
-                                    <tr>
-                                        <th class="f-b">Comunidad</th>                                        
+                                    <tr>                                       
+                                        <th class="f-b">Comunidad</th>
+                                        <th class="f-b">Descripción</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model.communityList)
                                     {
-                                        <tr>
-                                            <td>@item.first_name</td>                                            
-                                            <td class="text-center">
-                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "coadmin", id = item.id })">
-                                                    <button type="button"
-                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip"
-                                                            data-placement="top"
-                                                            title="Ver">
-                                                        <i class="mdi mdi-eye"></i>
-                                                    </button>
-                                                </a>                                                                                             
-                                            </td>
+                                    <tr>
+                                        <td>@item.first_name</td>
+                                        <td>@item.description</td>
+                                        <td class="text-center">
+                                            <a href="@Url.Action("listado", "titulares", new { area = "coadmin", id = item.id })"
+                                               class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                               data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                                <i class="mdi mdi-home"></i>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            @if (Model.communityID1 == item.id)
+                                            {
+                                                <input class="form-control" type="checkbox" value="@item.id" checked />
+                                            }
+                                            else
+                                            {
+                                                <input class="form-control" type="checkbox" value="@item.id" />
+                                            }
+                                        </td>
 
-                                        </tr>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
