--- a/WebApplication1/Views/contacto/listado.cshtml
+++ b/WebApplication1/Views/contacto/listado.cshtml
@@ -17,7 +17,7 @@
                         </div>
                         <div class="float-right">
                             <ul class="breadcrumb float-md-right">
-                                <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                                 <li class="breadcrumb-item active">Contactos</li>
                             </ul>
                         </div>
@@ -49,38 +49,23 @@
                         </div>
                     </div>
                 </div>
-            </div><!--end row-->            
+            </div><!--end row-->
+
+
+
+
+
+
+
 
             <div class="row">
-                @if (ViewBag.msgError != null)
-                {
-                    <div class="col-12">
-                        <div class="alert alert-danger" role="alert">
-                            <strong>Error: </strong> @ViewBag.msgError
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    </div>
-                }
                 <div class="col-12">
                     <div class="card m-b-30">
                         <div class="card-body">
                             <div class="row form-material">
                                 <div class="col-md-6">
                                     <h5 class="d-inline-block">Listado</h5>
-                                </div>
-                                <div class="col-md-6 mb-1">
-                                    @if (Model.contactList.Count > 0)
-                                    {
-                                        <button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button>
-                                    }
-                                    else
-                                    {
-                                        <a href="@Url.Action("informacion", "contacto", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button></a>
-                                    }
-
-                                </div>
+                                </div>                                
                             </div>
                             <div class="table-responsive">
                                 <table id="dataTable-tareas-completadas" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
@@ -99,40 +84,27 @@
                                     <tbody>
                                         @foreach (var item in Model.contactList)
                                         {
-                                            <tr>
-                                                <td class="text-center">@item.company_admin</td>
-                                                <td class="text-center">@item.coordinator</td>
-                                                <td class="text-center">@item.president</td>
-                                                <td class="text-center">@item.vice_president</td>
-                                                <td class="text-center">@item.treasurer</td>
+                                        <tr>
+                                            <td class="text-center">@item.company_admin</td>
+                                            <td class="text-center">@item.coordinator</td>
+                                            <td class="text-center">@item.president</td>
+                                            <td class="text-center">@item.vice_president</td>
+                                            <td class="text-center">@item.treasurer</td>
 
-                                                <td class="text-center">
-                                                    <a href="@Url.Action("ver", "contacto", new { area = "coadmin", id = item.id })">
-                                                        <button type="button"
-                                                                class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                                data-toggle="tooltip"
-                                                                data-placement="top"
-                                                                title="Ver">
-                                                            <i class="mdi mdi-eye"></i>
-                                                        </button>
-                                                    </a>
-                                                    <a href="@Url.Action("editar", "contacto", new { area = "coadmin", id = item.id })">
-                                                        <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                                data-toggle="tooltip" data-placement="top" title="Editar">
-                                                            <i class="mdi mdi-lead-pencil"></i>
-                                                        </button>
-                                                    </a>
-
-                                                    <button type="button" onclick="onDeleteContacto(this)" data-id="@item.id"
-                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                            data-toggle="tooltip" data-placement="top"
-                                                            title="Eliminar">
-                                                        <i class="mdi mdi-delete"></i>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("ver", "contacto", new { id = item.id })">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top"
+                                                            title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
                                                     </button>
-                                                </td>
+                                                </a>                                                
+                                            </td>
 
 
-                                            </tr>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
