--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -57,10 +57,11 @@
                         <div class="table-responsive">
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
-                                    <tr>                                       
+                                    <tr>
                                         <th class="f-b">Comunidad</th>
                                         <th class="f-b">Descripción</th>
                                         <th class="text-center f-b">Opciones</th>
+                                        <th class="f-b"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -86,7 +87,6 @@
                                                 <input class="form-control" type="checkbox" value="@item.id" />
                                             }
                                         </td>
-
                                     </tr>
                                     }
                                 </tbody>
