Cambio de session

--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -142,10 +142,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         }
                         else
                         {
-                            <select class="form-control selectComunidad" onchange="changeComunidad(this.value)" name="communitySelect">
+                            <select class="form-control selectComunidad" id="cbCommunitySession" onchange="ChangeCommunity(this)" name="communitySelect">
                                 @foreach (var item in Model.communityList)
                                 {
-                                    if (Model.communityID1 == item.id)
+                                    if (Convert.ToInt64(Session["CURRENT_COMU"]) == item.id)
                                     {
                                         <option value="@item.id" selected>@item.first_name</option>
                                     }
@@ -970,6 +970,44 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         refreshContextEvent();
                     }
                 }
+            });
+        }
+        //Onchange ComboBox de comunity
+        $('#cbCommunitySession').on('change', function () {
+            console.log(1);
+            onChangeCommunity($(this).val());           
+        });
+
+        $('.CommunitySession').on('change', function () {
+            onChangeCommunity($(this).val());           
+        });
+
+        function ChangeCommunity(self) {
+             console.log(1);
+            onChangeCommunity($(self).val());  
+        }
+
+        //Cambiar idCommunity en la session
+         function onChangeCommunity(id) {
+           // var id = $(self).data('id');
+            var formData = new FormData();
+            formData.append('id', id);
+            var url = "@Url.Action("ChangeCommunity", "control")";
+
+            $.ajax({
+                url: url,
+                type: "post",
+                data: formData,
+                success: function (result) {
+                    $("#ck-body-loading-overlay").hide();
+                    if (result.result === "error") {
+                        console.log('couln\'t get roles');
+                    } else {
+                        location.reload();
+                    }
+                },
+                processData: false,
+                contentType: false
             });
         }
 
