--- a/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/reservartwo.cshtml
@@ -48,7 +48,7 @@
                     {
                         @Html.AntiForgeryToken()
                         <div class="card-body">
-                            <h5 class="d-inline-block">3. Información del titular</h5>
+                            <h5 class="d-inline-block">Información del titular</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
