--- a/WebApplication1/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Views/comunicaciones/agregarblog.cshtml
@@ -1,7 +1,14 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "blog";
-    Page.Title = "Blog Agregar - Brokolee Software";
+    Page.Title = "Agregar entrada - Brokolee Software";
 }
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+<!-- include summernote css/js -->
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-lite.min.js"></script>
 
 <div class="page-content-wrapper">
 
@@ -18,7 +25,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Agregar Entrada</li>
+                            <li class="breadcrumb-item active">Agregar entrada</li>
                         </ul>
                     </div>
                 </div>
@@ -42,45 +49,45 @@
                     {
                         id = "newblogForm",
                         @class = "",
-                        enctype = "multipart/form-data"
+                        enctype = "multipart/form-data",
                     }))
                     {
                         @Html.AntiForgeryToken()
-                    <div class="card-body">
-                        <h5 class="d-inline-block">Nuevo Blog</h5>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="title"
-                                       data-toggle="tooltip" title="Título descriptivo del blog"
-                                       placeholder="Título" id="example-email-input-1" required />
-                                @*<small class="form-text text-muted">Título descriptivo del blog</small>*@
+                        <div class="card-body">
+                            <h5 class="d-inline-block">Nueva entrada</h5>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" type="text" value="" name="title"
+                                           data-toggle="tooltip" title="Título descriptivo del blog"
+                                           placeholder="Título" id="example-email-input-1" required />
+                                    @*<small class="form-text text-muted">Título descriptivo del blog</small>*@
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input-2" class="col-sm-3 col-form-label">Autora</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" type="text" value="" name="author"
-                                       data-toggle="tooltip" title="Autora descriptivo del blog" placeholder="Autora"
-                                       id="example-email-input-2" required />
-                                <small class="form-text text-muted">Autora descriptivo del blog</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" type="text" value="" name="author"
+                                           data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
+                                           id="example-email-input-2" required />
+                                    <small class="form-text text-muted">Autor descriptivo del blog</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
-                            <div class="col-sm-9">
-                                <textarea class="form-control" name="content" data-toggle="tooltip"
-                                          title="Contenido descriptivo del blog"></textarea>
-                                <small class="form-text text-muted">Contenido descriptivo del blog</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
+                                              title="Contenido descriptivo del blog"></textarea>
+                                    <small class="form-text text-muted">Contenido descriptivo del blog</small>
+                                </div>
                             </div>
+                            <div class="form-divider"></div>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="@Url.Action("blog", "comunicaciones")"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
-                        <div class="form-divider"></div>
-                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Blog</button></a>
-                        <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-                    </div>
                     }
                 </div>
             </div>
@@ -96,3 +103,9 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+
+<script>
+
+            $('#tbxContenido').summernote();
+
+</script>
